<resources>
    <string name="app_name">Leaderboard</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <string name="badge">badge</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="score">%d Skill IQ Score, %s</string>
    <string name="hours">%d Learning hours, %s</string>
    <string name="submit">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="background">background</string>
    <string name="all_fields_required">All Fields Required</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_link">Invalid Link</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="question_mark">\?</string>
    <string name="yes">Yes</string>
    <string name="close">close</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="retry">Retry</string>
</resources>