<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.noha.gadsleaderboard.ui.submit.SubmitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.submit.SubmitActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:contentDescription="@string/background"
                        android:rotation="180"
                        android:scaleType="fitEnd"
                        app:layout_constraintBottom_toBottomOf="@id/imageView4"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_oval_black" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginStart="70dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="70dp"
                        android:contentDescription="@string/app_name"
                        android:src="@mipmap/gads_toolbar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/project_submission"
                        android:textColor="@color/colorAccent"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:contentDescription="@string/background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:srcCompat="@drawable/ic_line_gradient" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.3" />

                    <ImageButton
                        android:id="@+id/backImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:background="@android:color/transparent"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView3"
                        app:srcCompat="@drawable/ic_backspace_24" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/background"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_oval_black" />

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_round_rectangle_white"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:text="@={viewModel.user.firstName}"
            android:textColorHint="?android:attr/textColorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/lastNameEditText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_round_rectangle_white"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:text="@={viewModel.user.lastName}"
            android:textColorHint="?android:attr/textColorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/firstNameEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/firstNameEditText"
            app:layout_constraintTop_toTopOf="@+id/firstNameEditText" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_round_rectangle_white"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:text="@={viewModel.user.email}"
            android:textColorHint="?android:attr/textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_round_rectangle_white"
            android:ems="10"
            android:hint="@string/project_on_github_link"
            android:padding="8dp"
            android:text="@={viewModel.user.projectLink}"
            android:textColorHint="?android:attr/textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="64dp"
            android:background="@drawable/ic_round_rectangle_yellow"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.showSuccessDialog || viewModel.showFailDialog || viewModel.showConfirmationDialog ? View.GONE :View.VISIBLE}"
            app:constraint_referenced_ids="lastNameEditText,editTextTextEmailAddress,button,firstNameEditText,editTextTextEmailAddress2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>